--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.2.0-alpha01'
     implementation "androidx.preference:preference:1.1.0"
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 
     implementation 'com.jakewharton:butterknife:10.2.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
