--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.2.0-alpha01'
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
     implementation "androidx.preference:preference:1.1.0"
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 
@@ -32,4 +32,6 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
