--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "ru.melod1n.vk"
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 3
-        versionName "Pre-Alpha 3"
+        versionCode 4
+        versionName "Pre-Alpha 4"
 
     }
     buildTypes {
@@ -21,17 +21,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = 1.8
-        targetCompatibility = 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.2.0-alpha03'
+    implementation 'androidx.appcompat:appcompat:1.2.0-beta01'
     implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-beta01'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha01'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha02'
     implementation 'androidx.cardview:cardview:1.0.0'
 
     //noinspection AnnotationProcessorOnCompilePath
