--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,10 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0-beta01'
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
-    implementation 'androidx.preference:preference:1.1.0'
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-beta01'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha02'
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
+    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-rc01'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha03'
     implementation 'androidx.cardview:cardview:1.0.0'
 
     //noinspection AnnotationProcessorOnCompilePath
@@ -46,5 +46,7 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.1'
 
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+
+    implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:1.0.1'
 //    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
