--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "ru.melod1n.vk"
@@ -43,10 +43,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.1'
+//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.1'
 
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
-
-    implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:1.0.1'
-//    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
